--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,14 @@
   border: solid black 1px;
 }
 
+.c {
+  cursor: crosshair;
+}
+
+.clicked {
+  background-color: blue;
+}
+
 .gameboard {
   display: grid;
   grid-template-columns: repeat(10, 30px);
@@ -15,4 +23,8 @@ body {
 
 .placed {
   background-color: aqua;
+}
+
+.hit {
+  background-color: red;
 }
